--- a/pom.xml
+++ b/pom.xml
@@ -41,13 +41,8 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                      <forkCount>3</forkCount>
-                      <reuseForks>true</reuseForks>
-                      <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
-                </configuration>
+                <version>3.0.0-M3</version>
             </plugin>
-
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
