--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
     <build>
         <finalName>maven-code-coverage</finalName>
         <plugins>
-            <plugin>
+            <!--plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M3</version>
@@ -48,7 +48,7 @@
                     <reuseForks>true</reuseForks>
                     <runOrder>alphabetical</runOrder>
                 </configuration>
-            </plugin>
+            </plugin-->
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
